--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:scaleType="centerCrop"
         android:src="@drawable/image"
         android:contentDescription="@string/selected_image"
-        android:layout_width="400dp"
-        android:layout_height="400dp"/>
+        android:layout_width="370dp"
+        android:layout_height="370dp"/>
 
     <Button
         android:id="@+id/pick_button"
@@ -23,6 +23,16 @@
         android:layout_margin="16dp"
         style="@style/Widget.AppCompat.Button.Colored"
         android:text="@string/select_button"
+        android:padding="10dp" />
+
+    <Button
+        android:id="@+id/open_camera_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:text="@string/camera_button"
         android:padding="10dp" />
 
 </LinearLayout>
